Major codebase chenges applied to channel and media relationshipd. genres table added and crud polices added for user interactivity based on auth state. All are yet to be tested
